Return in itemchange if already initialized

BUG: 478192